--- a/docs/game-docs/bus-simulator-16/manifest.json
+++ b/docs/game-docs/bus-simulator-16/manifest.json
@@ -1,10 +1,3 @@
 {
-  "name": "Bus Simulator 16",
-  "number": 754,
-  "game_protocol": "FreeTrack20",
-  "supported_since": "V170",
-  "verified": null,
-  "by": null,
-  "international_id": "4775",
-  "ftn_id": "02F2E24441D3178B43DB00"
+  "name": "Bus Simulator 16"
 }
