--- a/docs/game-docs/il-2-sturmovik-forgotten-battles/manifest.json
+++ b/docs/game-docs/il-2-sturmovik-forgotten-battles/manifest.json
@@ -1,10 +1,3 @@
 {
-  "name": "IL-2 Sturmovik: Forgotten Battles",
-  "number": 183,
-  "game_protocol": "FreeTrack20",
-  "supported_since": "V160",
-  "verified": true,
-  "by": "Glenn",
-  "international_id": "1001",
-  "ftn_id": "00B722FD79137100621100"
+  "name": "IL-2 Sturmovik: Forgotten Battles"
 }
