--- a/docs/game-docs/air-missions-hind/manifest.json
+++ b/docs/game-docs/air-missions-hind/manifest.json
@@ -1,10 +1,3 @@
 {
-  "name": "Air Missions: HIND",
-  "number": 762,
-  "game_protocol": "FreeTrack20",
-  "supported_since": "V160",
-  "verified": null,
-  "by": null,
-  "international_id": "5350",
-  "ftn_id": "02FAA58A3613B4C36BBA00"
+  "name": "Air Missions: Hind"
 }
