--- a/docs/game-docs/colin-mcrae-rally-04/manifest.json
+++ b/docs/game-docs/colin-mcrae-rally-04/manifest.json
@@ -1,10 +1,3 @@
 {
-  "name": "Colin McRae Rally 04",
-  "number": 64,
-  "game_protocol": "FreeTrack20",
-  "supported_since": "V160",
-  "verified": null,
-  "by": null,
-  "international_id": "8103",
-  "ftn_id": "0040D13C2A843DA526A610"
+  "name": "Colin McRae Rally 2004"
 }
