--- a/docs/game-docs/enemy-engaged-comanche-vs-hokum/manifest.json
+++ b/docs/game-docs/enemy-engaged-comanche-vs-hokum/manifest.json
@@ -1,10 +1,3 @@
 {
-  "name": "Enemy Engaged: Comanche vs. Hokum",
-  "number": 110,
-  "game_protocol": "FreeTrack20",
-  "supported_since": "V160",
-  "verified": null,
-  "by": null,
-  "international_id": "2101",
-  "ftn_id": "006E157D789379636AED00"
+  "name": "Enemy Engaged: Comanche vs Hokum"
 }
