--- a/docs/game-docs/f1-challenge-99-02/manifest.json
+++ b/docs/game-docs/f1-challenge-99-02/manifest.json
@@ -1,10 +1,3 @@
 {
-  "name": "F1 Challenge 99-02",
-  "number": 124,
-  "game_protocol": "FreeTrack20",
-  "supported_since": "V160",
-  "verified": null,
-  "by": null,
-  "international_id": "4401",
-  "ftn_id": "007CA15F278FB660C9D210"
+  "name": "F1 Challenge '99-'02"
 }
