--- a/docs/game-docs/farming-simulator-17/manifest.json
+++ b/docs/game-docs/farming-simulator-17/manifest.json
@@ -1,10 +1,3 @@
 {
-  "name": "Farming Simulator 17",
-  "number": 729,
-  "game_protocol": "FreeTrack20",
-  "supported_since": "V170",
-  "verified": null,
-  "by": null,
-  "international_id": "1726",
-  "ftn_id": "02D9F1CEFF524246DF1900"
+  "name": "Farming Simulator 17"
 }
