--- a/docs/game-docs/mechwarrior-online/manifest.json
+++ b/docs/game-docs/mechwarrior-online/manifest.json
@@ -1,10 +1,3 @@
 {
-  "name": "MechWarrior Online",
-  "number": 720,
-  "game_protocol": "FreeTrack20",
-  "supported_since": "V170",
-  "verified": null,
-  "by": null,
-  "international_id": "3026",
-  "ftn_id": "02D0E0DCBC723836CD2400"
+  "name": "MechWarrior Online"
 }
