--- a/docs/game-docs/nascar-simracing/manifest.json
+++ b/docs/game-docs/nascar-simracing/manifest.json
@@ -1,10 +1,3 @@
 {
-  "name": "NASCAR SimRacing",
-  "number": 256,
-  "game_protocol": "FreeTrack20",
-  "supported_since": "V160",
-  "verified": null,
-  "by": null,
-  "international_id": "6201",
-  "ftn_id": "01004098708870D761A500"
+  "name": "NASCAR SimRacing"
 }
