--- a/docs/game-docs/toca-race-driver-3/manifest.json
+++ b/docs/game-docs/toca-race-driver-3/manifest.json
@@ -1,10 +1,3 @@
 {
-  "name": "Toca Race Driver 3",
-  "number": 392,
-  "game_protocol": "FreeTrack20",
-  "supported_since": "V160",
-  "verified": null,
-  "by": null,
-  "international_id": "8101",
-  "ftn_id": "01884098D36972B551A900"
+  "name": "TOCA Race Driver 3"
 }
