--- a/docs/game-docs/everspace-2/manifest.json
+++ b/docs/game-docs/everspace-2/manifest.json
@@ -1,10 +1,3 @@
 {
-  "name": "EVERSPACE 2",
-  "number": 860,
-  "game_protocol": "FreeTrack20",
-  "supported_since": "V160",
-  "verified": null,
-  "by": null,
-  "international_id": "4076",
-  "ftn_id": "035C221257068D1F149300"
+  "name": "Everspace 2"
 }
