--- a/docs/game-docs/frontier-pilot-simulator/manifest.json
+++ b/docs/game-docs/frontier-pilot-simulator/manifest.json
@@ -1,10 +1,3 @@
 {
-  "name": "Frontier Pilot Simulator",
-  "number": 862,
-  "game_protocol": "FreeTrack20",
-  "supported_since": "V160",
-  "verified": null,
-  "by": null,
-  "international_id": "8225",
-  "ftn_id": "035EB613014C8ABC27E700"
+  "name": "Frontier Pilot Simulator"
 }
