--- a/docs/game-docs/nuclear-option/manifest.json
+++ b/docs/game-docs/nuclear-option/manifest.json
@@ -1,10 +1,3 @@
 {
-  "name": "Nuclear Option",
-  "number": 870,
-  "game_protocol": "FreeTrack20",
-  "supported_since": "V160",
-  "verified": null,
-  "by": null,
-  "international_id": "8285",
-  "ftn_id": "036681C0C5168504285700"
+  "name": "Nuclear Option"
 }
