--- a/docs/game-docs/tiny-combat-arena/manifest.json
+++ b/docs/game-docs/tiny-combat-arena/manifest.json
@@ -1,10 +1,3 @@
 {
-  "name": "Tiny Combat Arena",
-  "number": 876,
-  "game_protocol": "FreeTrack20",
-  "supported_since": "V160",
-  "verified": null,
-  "by": null,
-  "international_id": "8280",
-  "ftn_id": "036C1A586F3FF0120D6F00"
+  "name": "Tiny Combat Arena"
 }
