--- a/docs/game-docs/tourist-bus-simulator/manifest.json
+++ b/docs/game-docs/tourist-bus-simulator/manifest.json
@@ -1,10 +1,3 @@
 {
-  "name": "Tourist Bus Simulator",
-  "number": 825,
-  "game_protocol": "FreeTrack20",
-  "supported_since": "V160",
-  "verified": null,
-  "by": null,
-  "international_id": "8130",
-  "ftn_id": "03395E485D939DF3C8E600"
+  "name": "Tourist Bus Simulator"
 }
