--- a/docs/game-docs/train-sim-world-2/manifest.json
+++ b/docs/game-docs/train-sim-world-2/manifest.json
@@ -1,10 +1,3 @@
 {
-  "name": "Train Sim World 2",
-  "number": 878,
-  "game_protocol": "FreeTrack20",
-  "supported_since": "V160",
-  "verified": null,
-  "by": null,
-  "international_id": "8220",
-  "ftn_id": "036E5CDED09B7992079800"
+  "name": "Train Sim World 2"
 }
